[package]
name = "archbelt"
version = "0.2.1"
description = "A tool to work with Archean blueprints and XenonCode modules"
license = "MIT"
authors = ["Michael K <tsalaroth@gmail.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/archean-cookbook/archbelt"
exclude = [
    ".github/workflows/rust-release.yml"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5"
clap_complete = "4.5"
steamlocate = "2.0.0-beta.2"
serde_derive = "1.0.204"
serde_json = "1.0.120"
serde = { version = "1", features = ["derive"] }
notify = "6"
log = "0.4.22"
notify-debouncer-full = "0.3.1"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
